--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,5 +7,6 @@
     <string name="title_activity_resources">Resources</string>
     <string name="title_activity_location">Location</string>
     <string name="title_activity_faq">F.A.Q\'s</string>
+    <string name="appointment_url">http://www.sjsu.edu/writingcenter/</string>
 
 </resources>
