Set launcher icon to be the pencil logo Set background of the welcome activity to be a blurred image of the SJSU tower Add social media icons Add functionality to social media buttons Changed URL of appointment button

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,9 @@
     <string name="title_activity_resources">Resources</string>
     <string name="title_activity_location">Location</string>
     <string name="title_activity_faq">F.A.Q\'s</string>
-    <string name="appointment_url">http://www.sjsu.edu/writingcenter/</string>
+    <string name="appointment_url">https://sjsu.mywconline.com/</string>
+    <string name="youtube_url">https://www.youtube.com/user/SJSUWritingCenter/</string>
+    <string name="twitter_url">https://twitter.com/thewcatsjsu</string>
+    <string name="facebook_url">https://www.facebook.com/sjsuwritingcenter</string>
 
 </resources>
