Changed in app browser to point to the full website Added phone and email shortcuts to the welcome screen Tweaked the appointments button layout to match the others

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,10 +8,12 @@
     <string name="title_activity_location">Location</string>
     <string name="title_activity_faq">FAQs</string>
     <string name="appointment_url">https://sjsu.mywconline.com/</string>
-    <string name="mobile_appointment_url">https://sjsu.mywconline.com/text/appt_backdoor.php</string>
+    <string name="mobile_appointment_url">https://sjsu.mywconline.com</string>
     <string name="youtube_url">https://www.youtube.com/user/SJSUWritingCenter/</string>
     <string name="twitter_url">https://twitter.com/thewcatsjsu</string>
     <string name="facebook_url">https://www.facebook.com/sjsuwritingcenter</string>
     <string name="title_activity_appointment">AppointmentActivity</string>
+    <string name="phone_number">4089242308</string>
+    <string name="email">writingcenter@sjsu.edu</string>
 
 </resources>
